# pyStream

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
src/pystream/: __about__.py  __init__.py  pystream.py
tests/: test_pystream.py
